# sim-to-real-module

./: .gitignore  GUIDE.md  README.md
nav2_control_ws/src/control_pkg/: package.xml  setup.py
nav2_control_ws/src/control_pkg/config/: control_2d_fr09.yaml  control_3d_fr09.yaml
nav2_control_ws/src/control_pkg/launch/: control.launch.py
nav2_fixed_planning_ws/src/fixed_planning_pkg/: package.xml  setup.cfg  setup.py
nav2_fixed_planning_ws/src/fixed_planning_pkg/config/: fixed_planning_2d_fr09.yaml
nav2_fixed_planning_ws/src/fixed_planning_pkg/fixed_planning_pkg/: fixed_path_follower.py
nav2_fixed_planning_ws/src/fixed_planning_pkg/launch/: fixed_path.launch.py
nav2_gui_ws/src/gui_pkg/: package.xml  setup.py
nav2_gui_ws/src/gui_pkg/launch/: gui.launch.py
nav2_gui_ws/src/gui_pkg/rviz/: carla.rviz  fixed_path.rviz  slam.rviz
nav2_localization_ws/src/localization_pkg/: package.xml  setup.cfg  setup.py
nav2_localization_ws/src/localization_pkg/config/: localization.yaml
nav2_localization_ws/src/localization_pkg/launch/: localization.launch.py
nav2_localization_ws/src/localization_pkg/localization_pkg/: waypoint_sender.py
nav2_map_ws/src/map_pkg/: package.xml  setup.cfg  setup.py
nav2_map_ws/src/map_pkg/config/: map.yaml
nav2_map_ws/src/map_pkg/launch/: map.launch.py
nav2_map_ws/src/map_pkg/maps/: parking.pgm  parking.yaml  test.pgm  test.yaml  test_vanjee.pgm  test_vanjee.yaml
nav2_perception_ws/src/perception_pkg/: package.xml  setup.py
nav2_perception_ws/src/perception_pkg/config/: perception_fr09.yaml  sensor_fr09.yaml
nav2_perception_ws/src/perception_pkg/launch/: perception.launch.py
nav2_perception_ws/src/perception_pkg/perception_pkg/: odometry.py
nav2_planning_ws/src/planning_pkg/: package.xml  setup.cfg  setup.py
nav2_planning_ws/src/planning_pkg/behavior/: navigate_through_poses_no_spin.xml  navigate_to_pose_no_spin.xml
nav2_planning_ws/src/planning_pkg/config/: planning_2d_fr09.yaml  planning_3d_fr09.yaml
nav2_planning_ws/src/planning_pkg/launch/: planning.launch.py
nav2_sensor_bridge_ws/src/sensor_bridge_pkg/: package.xml  setup.cfg  setup.py
nav2_sensor_bridge_ws/src/sensor_bridge_pkg/config/: sensor_bridge_carla.yaml
nav2_sensor_bridge_ws/src/sensor_bridge_pkg/config/fr09/: sensor_bridge_ouster.yaml  sensor_bridge_vanjee.yaml
nav2_sensor_bridge_ws/src/sensor_bridge_pkg/config/mkmini/: sensor_bridge_vanjee.yaml
nav2_sensor_bridge_ws/src/sensor_bridge_pkg/launch/: sensor_bridge.launch.py
nav2_sensor_bridge_ws/src/sensor_bridge_pkg/resource/: sensor_bridge_pkg
nav2_sensor_bridge_ws/src/sensor_bridge_pkg/sensor_bridge_pkg/: sensor_bridge.py
nav2_slam_ws/src/slam_pkg/: package.xml  setup.py
nav2_slam_ws/src/slam_pkg/config/: slam_ouster.yaml  slam_vanjee.yaml
nav2_slam_ws/src/slam_pkg/launch/: slam.launch.py
nav2_slam_ws/src/slam_pkg/slam_pkg/: teleop_key.py
nav2_vehicle_ws/src/vehicle_pkg/: package.xml  setup.cfg  setup.py
nav2_vehicle_ws/src/vehicle_pkg/config/: vehicle_fr09.yaml
nav2_vehicle_ws/src/vehicle_pkg/launch/: vehicle.launch.py
nav2_vehicle_ws/src/vehicle_pkg/vehicle_pkg/: cmd_vel_to_ackermann.py
scripts/: compare_localization_bag.py  compare_odom_bag.py  dynamic_obstacle_controller.py  static_obstacle_controller.py
